fixed problem with background-image covering wrapper

--- a/3a/src/components/registerUser/registerUser.module.css
+++ b/3a/src/components/registerUser/registerUser.module.css
@@ -1,11 +1,23 @@
 .registerUser {
-    position: relative;
-    top: 0vh;
-    left: 15vw;
+    width: 146px;
 }
 
-.input {
+.registerUser>p {
+    margin-top: 0;
+    font-size: large;
+}
+
+.registerUser input {
     position: relative;
     float: right;
-    
+}
+
+form>div>button {
+    width: 100%;
+    height: 35px;
+    background: round;
+    color: white;
+    border-radius: 4px;
+    margin-top: 10px;
+
 }
