--- a/3a/src/components/wrapper/wrapper.module.css
+++ b/3a/src/components/wrapper/wrapper.module.css
@@ -1,13 +1,13 @@
 .wrapper {
     position: relative;
     float: left;
-    top: 150px;
-    left: 27vw;
-    width: 250px;
-    min-height: 200px;
+    width: auto;
+    max-height: 312px;
     border-radius: 4px;
     box-shadow: 3px 2px 10px;
     padding: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .wrapperhr {
@@ -15,4 +15,5 @@
     height: 1px;
     background: linear-gradient(90deg, grey, black, grey) ;
     border: none;
+    margin-bottom: 0;
 }
